--- a/oaip-part2-ref1/pas/Makefile
+++ b/oaip-part2-ref1/pas/Makefile
@@ -1,5 +1,5 @@
 
-all: bin/parser
+all: bin/parser bin/trees
 
 
 bin:
@@ -8,7 +8,28 @@ bin:
 bin/parser: bin src/*.pas
 	fpc -obin/parser ./src/parser.pas
 
+bin/trees: bin src/*.pas
+	fpc -obin/trees ./src/trees.pas
+
 clean:
 	rm -f bin/parser
 	rm -f bin/*.o
 	rm -f bin/*.ppu
+
+
+parser-tests:
+	bin/parser 'x^(y+z*s)*d-c/s'
+	bin/parser 'a+c-e^(x-y/z)*s'
+	bin/parser 'a-b^d*(e+s/d)-w'
+	bin/parser 's*(a^x+b^y)-z/f'
+	bin/parser 'd^(u+v/c)*(s-w)'
+	bin/parser '(d-e)^f*g+s/a+w'
+	bin/parser 'b*((x-y/c)*(z^d+a))-e'
+	bin/parser 't*(y^(z-u)+f)-h/m'
+	bin/parser 'e+s*(a-t^e)+q/p'
+	bin/parser 'g*(u+j*n)^s+a/p'
+	bin/parser '(y-z/v)*a^c/d+u'
+	bin/parser 'f-t^(k*(s-h)-n*d^a)'
+	bin/parser '((t+v-a/b)+(s-z^d))*k'
+	bin/parser 'k*(m+n*j)^i-v/u'
+	bin/parser '(d-c/x^e)*z+f*e'
